--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,77 +1,7 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
+/* tailwind css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 * {
   box-sizing: border-box;
@@ -85,23 +15,99 @@ body {
   overflow-x: hidden;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
+
+/* root colors */
+:root { 
+  --black: #1b1c1d;
+  --white: #f9fdff;
+  --primary: #256EFF;
+  --secondary: #d72638;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+/* <-----text-----> */
+/* title */
+.title {
+  font-weight: bold;
+  font-size: 30px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+/* inputs */
+.input {
+  background: none;
+  outline: none !important;
+  padding: 6px 10px;
+  flex: 1;
+}
+.input__container, .filter__container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 10px;
+  padding: 5px 8px;
+  opacity: 0.75;
+  max-height: 40px;
+}
+.input__label {
+  font-size: 16px;
+  font-weight: bolder;
+}
+
+.filter__container {
+  border-radius: 25px;
+  padding: 5px !important;
+}
+.filter__input {
+  background: none;
+  outline: none !important;
+  flex: 1;
+}
+
+/* file input */
+.file__input__container {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.file__input {
+    position: absolute;
+    z-index: -1;
+    top: 15px;
+    left: 20px;
+    font-size: 17px;
+    color: #b8b8b8;
+}
+.file__input__btn {
+    display: inline-block;
+    border-radius: 50%;
+    color: white;
+    text-align: center;
+    padding: 6px;
+    transition: all 0.5s;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+}
+
+/* buttons */
+.button {
+  width: 100%;
+  border-radius: 10px;
+  transition: transform 450ms;
+  padding: 8px 20px;
+}
+.button:hover {
+  transform: scale(1.06);
+}
+
+
+/* icons */
+.sidebar__icon {
+  margin-right: 5px;
 }
