--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,7 +29,7 @@ body {
 /* title */
 .title {
   font-weight: bold;
-  font-size: 30px;
+  font-size: 25px;
 }
 
 /* inputs */
@@ -43,8 +43,7 @@ body {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  border-width: 1px;
-  border-style: solid;
+  border: 1px solid #ced4da;
   border-radius: 10px;
   padding: 5px 8px;
   opacity: 0.75;
