--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -125,6 +125,32 @@ body {
 }
 
 
+
+/* <-----dashboard-----> */
+.fact__item {
+  padding: 10px;
+  border-radius: 12px;
+}
+.fact__icon__container {
+  padding: 10px;
+  border-radius: 10px;
+}
+.fact__label {
+  opacity: 0.5;
+  margin-bottom: -5px;
+}
+.fact__number {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+//cchart
+.chart__container {
+  width: 100%;
+  height: 300px;
+  background: red;
+}
+
 /* Cusomize scrollbar */
 ::-webkit-scrollbar {
   width: 4px;
